name:                classyplate
version:             0.3.0.0
synopsis:            Fuseable type-class based generics
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nemeth Boldizsar
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Generics.ClassyPlate
                     , Data.Generics.ClassyPlate.Generate
                     , Data.Generics.ClassyPlate.Common
                     , Data.Generics.ClassyPlate.TypePrune
                     , Data.Generics.ClassyPlate.TH
                     , Data.Generics.ClassyPlate.Core
  build-depends:       base             >=4.9   && <4.10
                     , containers       >=0.5   && <0.6
                     , type-list        >=0.5   && <0.6
                     , template-haskell >=2.11  && <2.12
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark generics-comparison
  type:                exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is:             Main.hs
  build-depends:       base             >=4.9   && <4.10
                     , classyplate      >=0.3   && <0.4
                     , uniplate         >=1.6   && <1.7
                     , parallel         >=3.2   && <3.3
                     , type-list        >=0.5   && <0.6
                     , template-haskell >=2.11  && <2.12
                     , criterion        >=1.1   && <1.2
  default-language:    Haskell2010
